--- a/src/main/resources/templates/portal/iv/survey/result/view.html
+++ b/src/main/resources/templates/portal/iv/survey/result/view.html
@@ -6,7 +6,10 @@
 <th:block layout:fragment="content">
 	
 	<div class="block-header" >
-		<div class="block-title" th:text="설문조사결과보기"></div>
+		<div class="block-title" th:text="#{HQP_L_SURVEY_VIEW_RESULT}"></div>
+		<div class="block-button-area">
+			<button type="button" th:text="#{HQP_B_CLOSE}" onclick="window.close();"></button>
+		</div>
 	</div>	
 	
 	<div class="condition-area">
@@ -14,7 +17,7 @@
 			<tr>
 				<td style="width:20%">[[${survey?.title}]]</td>
 				<td th:style="${#lists.isEmpty(survey?.uploadFileLists) ? 'display:none' : ''}">
-					첨부파일 : <span th:each="uploadFileList : ${survey?.uploadFileLists}">
+					[[#{HQP_L_ATTACHMENT}]] : <span th:each="uploadFileList : ${survey?.uploadFileLists}">
 						<a class="link" th:text="${uploadFileList.fullOriginName}" th:downloadKey="${uploadFileList.downloadKey}"></a>
 						(<span th:text="${uploadFileList.displayFileSize}"></span>)
 					</span>
@@ -39,7 +42,7 @@
 										<td>
 											<span style="color:blue;" th:text="${rowIndex.count}+'.'"></span>
 											<span style="color:blue;" th:text="${voteItem.title}"></span>
-											<span>(객관식)</span>
+											<span>([[#{HQP_L_OBJECTIVE_QUESTION}]])</span>
 										</td>
 									</tr>
 								</table>
@@ -72,7 +75,7 @@
 										<td>
 											<span style="color:blue;" th:text="${rowIndex.count}+'.'"></span>
 											<span style="color:blue;" th:text="${voteItem.title}"></span>
-											<span>(다중선택개수 : [[${voteItem.mandatoryCnt}]])</span>
+											<span>([[#{HQP_L_SELECTION_NUMBER}]] : [[${voteItem.mandatoryCnt}]])</span>
 										</td>
 									</tr>
 								</table>
@@ -105,6 +108,7 @@
 										<td>
 											<span style="color:blue;" th:text="${rowIndex.count}+'.'"></span>
 											<span style="color:blue;" th:text="${voteItem.title}"></span>
+											<span>([[#{HQP_L_SUBJECTIVE_QUESTION}]])</span>
 										</td>
 									</tr>
 								</table>
@@ -128,7 +132,7 @@
 										<td>
 											<span style="color:blue;" th:text="${rowIndex.count}+'.'"></span>
 											<span style="color:blue;" th:text="${voteItem.title}"></span>
-											<span>(가중치의 합 : 10점)</span>
+											<span>([[#{HQP_L_EXTRA_WEIGHT_SUM}]] : 10[[#{HQP_L_POINT}]])</span>
 										</td>
 									</tr>
 								</table>
@@ -157,7 +161,7 @@
 										<td>
 											<span style="color:blue;" th:text="${rowIndex.count}+'.'"></span>
 											<span style="color:blue;" th:text="${voteItem.title}"></span>
-											<span>(우선순위)</span>
+											<span>([[#{HQP_L_PRIORITY}]])</span>
 										</td>
 									</tr>
 								</table>
